add some folders

--- a/sonar.ipynb
+++ b/sonar.ipynb
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "sonar_df = pd.read_csv('sonar.csv', header=None)\n",
+    "sonar_df = pd.read_csv('./datasets/sonar.csv', header=None)\n",
     "sonar_df.head()"
    ]
   },
