--- a/flowers.ipynb
+++ b/flowers.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "array([0, 0, 0, ..., 4, 4, 4], dtype=int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,30 +448,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<4317x5 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 4317 stored elements in Compressed Sparse Row format>"
+       "array([[0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       ...,\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = y.reshape(-1,1)\n",
+    "# oneHotEncodering the y\n",
     "\n",
-    "ct = ColumnTransformer(\n",
-    "    transformers=[('encoder', OneHotEncoder(categories='auto'), [0])],\n",
-    "    remainder='passthrough'\n",
-    ")\n",
+    "y = y.reshape(-1, 1)\n",
     "\n",
-    "y = ct.fit_transform(y)\n",
+    "onehotencoder = OneHotEncoder()\n",
+    "\n",
+    "y = onehotencoder.fit_transform(y)\n",
+    "\n",
+    "y = y.toarray()\n",
     "\n",
     "y"
    ]
