--- a/flowers.ipynb
+++ b/flowers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,15 @@
     "import os\n",
     "import cv2\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "tf.compat.v1.disable_eager_execution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +29,7 @@
        "['daisy', 'dandelion', 'rose', 'sunflower', 'tulip']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +387,7 @@
        "         [0.0196  , 0.2079  , 0.204   ]]]], dtype=float16)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +410,7 @@
        "(4317, 64, 64, 3)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
        "array([0, 0, 0, ..., 4, 4, 4], dtype=int64)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,22 +449,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 1.],\n",
-       "       [1., 0.],\n",
-       "       [1., 0.],\n",
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
        "       ...,\n",
-       "       [1., 0.],\n",
-       "       [1., 0.],\n",
-       "       [0., 1.]])"
+       "       [0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,6 +481,118 @@
     "y = y.toarray()\n",
     "\n",
     "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = shuffle(X, y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3453, 64, 64, 3), (864, 64, 64, 3), (3453, 5), (864, 5))"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### for processing we should change the shape of images to one dimensional arrays that why we multiply the (64, 64, 3) that it is equal to 12288"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.reshape(3453, 12288)\n",
+    "\n",
+    "X_test = X_test.reshape(864, 12288)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3453, 12288), (864, 12288))"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Dimensions must be equal, but are 12288 and 5 for '{{node add_8}} = AddV2[T=DT_HALF](MatMul_8, add_8/ReadVariableOp)' with input shapes: [64,12288], [5].",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[107], line 14\u001b[0m\n\u001b[0;32m      9\u001b[0m y_\u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mcompat\u001b[39m.\u001b[39mv1\u001b[39m.\u001b[39mplaceholder(tf\u001b[39m.\u001b[39mfloat16, [\u001b[39mNone\u001b[39;00m, n_class])\n\u001b[0;32m     11\u001b[0m init \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mcompat\u001b[39m.\u001b[39mv1\u001b[39m.\u001b[39mglobal_variables_initializer()\n\u001b[1;32m---> 14\u001b[0m pred \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mnn\u001b[39m.\u001b[39msoftmax(tf\u001b[39m.\u001b[39;49mmatmul(w, x) \u001b[39m+\u001b[39;49m b)\n",
+      "File \u001b[1;32mc:\\Users\\Niazi Wall\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m--> 153\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    154\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    155\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mc:\\Users\\Niazi Wall\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\framework\\ops.py:1973\u001b[0m, in \u001b[0;36m_create_c_op\u001b[1;34m(graph, node_def, inputs, control_inputs, op_def, extract_traceback)\u001b[0m\n\u001b[0;32m   1970\u001b[0m   c_op \u001b[39m=\u001b[39m pywrap_tf_session\u001b[39m.\u001b[39mTF_FinishOperation(op_desc)\n\u001b[0;32m   1971\u001b[0m \u001b[39mexcept\u001b[39;00m errors\u001b[39m.\u001b[39mInvalidArgumentError \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m   1972\u001b[0m   \u001b[39m# Convert to ValueError for backwards compatibility.\u001b[39;00m\n\u001b[1;32m-> 1973\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(e\u001b[39m.\u001b[39mmessage)\n\u001b[0;32m   1975\u001b[0m \u001b[39m# Record the current Python stack trace as the creating stacktrace of this\u001b[39;00m\n\u001b[0;32m   1976\u001b[0m \u001b[39m# TF_Operation.\u001b[39;00m\n\u001b[0;32m   1977\u001b[0m \u001b[39mif\u001b[39;00m extract_traceback:\n",
+      "\u001b[1;31mValueError\u001b[0m: Dimensions must be equal, but are 12288 and 5 for '{{node add_8}} = AddV2[T=DT_HALF](MatMul_8, add_8/ReadVariableOp)' with input shapes: [64,12288], [5]."
+     ]
+    }
+   ],
+   "source": [
+    "lr = .001\n",
+    "epoch = 100\n",
+    "n_class = 5\n",
+    "n_dim = 64\n",
+    "\n",
+    "x = tf.compat.v1.placeholder(tf.float16, [None, 12288])\n",
+    "w = tf.Variable(tf.cast(tf.zeros([12288, n_class]), tf.float16))\n",
+    "b = tf.Variable(tf.cast(tf.zeros([n_class]), tf.float16))\n",
+    "y_= tf.compat.v1.placeholder(tf.float16, [None, n_class])\n",
+    "\n",
+    "init = tf.compat.v1.global_variables_initializer()\n",
+    "\n",
+    "\n",
+    "pred = tf.nn.softmax(tf.matmul(w, x) + b)\n"
    ]
   },
   {
