--- a/flowers.ipynb
+++ b/flowers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "['daisy', 'dandelion', 'rose', 'sunflower', 'tulip']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "         [0.0196  , 0.2079  , 0.204   ]]]], dtype=float16)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "(4317, 64, 64, 3)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "array([0, 0, 0, ..., 4, 4, 4], dtype=int64)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "       [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "((3453, 64, 64, 3), (864, 64, 64, 3), (3453, 5), (864, 5))"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "((3453, 12288), (864, 12288))"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,23 +561,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Dimensions must be equal, but are 12288 and 5 for '{{node add_8}} = AddV2[T=DT_HALF](MatMul_8, add_8/ReadVariableOp)' with input shapes: [64,12288], [5].",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[107], line 14\u001b[0m\n\u001b[0;32m      9\u001b[0m y_\u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mcompat\u001b[39m.\u001b[39mv1\u001b[39m.\u001b[39mplaceholder(tf\u001b[39m.\u001b[39mfloat16, [\u001b[39mNone\u001b[39;00m, n_class])\n\u001b[0;32m     11\u001b[0m init \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mcompat\u001b[39m.\u001b[39mv1\u001b[39m.\u001b[39mglobal_variables_initializer()\n\u001b[1;32m---> 14\u001b[0m pred \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mnn\u001b[39m.\u001b[39msoftmax(tf\u001b[39m.\u001b[39;49mmatmul(w, x) \u001b[39m+\u001b[39;49m b)\n",
-      "File \u001b[1;32mc:\\Users\\Niazi Wall\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m--> 153\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    154\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    155\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\Niazi Wall\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tensorflow\\python\\framework\\ops.py:1973\u001b[0m, in \u001b[0;36m_create_c_op\u001b[1;34m(graph, node_def, inputs, control_inputs, op_def, extract_traceback)\u001b[0m\n\u001b[0;32m   1970\u001b[0m   c_op \u001b[39m=\u001b[39m pywrap_tf_session\u001b[39m.\u001b[39mTF_FinishOperation(op_desc)\n\u001b[0;32m   1971\u001b[0m \u001b[39mexcept\u001b[39;00m errors\u001b[39m.\u001b[39mInvalidArgumentError \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m   1972\u001b[0m   \u001b[39m# Convert to ValueError for backwards compatibility.\u001b[39;00m\n\u001b[1;32m-> 1973\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(e\u001b[39m.\u001b[39mmessage)\n\u001b[0;32m   1975\u001b[0m \u001b[39m# Record the current Python stack trace as the creating stacktrace of this\u001b[39;00m\n\u001b[0;32m   1976\u001b[0m \u001b[39m# TF_Operation.\u001b[39;00m\n\u001b[0;32m   1977\u001b[0m \u001b[39mif\u001b[39;00m extract_traceback:\n",
-      "\u001b[1;31mValueError\u001b[0m: Dimensions must be equal, but are 12288 and 5 for '{{node add_8}} = AddV2[T=DT_HALF](MatMul_8, add_8/ReadVariableOp)' with input shapes: [64,12288], [5]."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr = .001\n",
     "epoch = 100\n",
@@ -585,14 +571,180 @@
     "n_dim = 64\n",
     "\n",
     "x = tf.compat.v1.placeholder(tf.float16, [None, 12288])\n",
-    "w = tf.Variable(tf.cast(tf.zeros([12288, n_class]), tf.float16))\n",
+    "w = tf.Variable(tf.cast(tf.zeros([n_class, 12288]), tf.float16))\n",
     "b = tf.Variable(tf.cast(tf.zeros([n_class]), tf.float16))\n",
-    "y_= tf.compat.v1.placeholder(tf.float16, [None, n_class])\n",
+    "y_= tf.compat.v1.placeholder(tf.float16, [None, n_class])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = tf.compat.v1.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = tf.nn.softmax(tf.matmul(x, tf.transpose(w)) + b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_function = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=pred, labels=y_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_steps = tf.compat.v1.train.GradientDescentOptimizer(lr).minimize(cost_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = tf.compat.v1.Session()\n",
+    "sess.run(init)\n",
+    "cost_history = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch:  0 cost:  1.62\n",
+      "epoch:  1 cost:  1.62\n",
+      "epoch:  2 cost:  1.619\n",
+      "epoch:  3 cost:  1.617\n",
+      "epoch:  4 cost:  1.616\n",
+      "epoch:  5 cost:  1.615\n",
+      "epoch:  6 cost:  1.614\n",
+      "epoch:  7 cost:  1.612\n",
+      "epoch:  8 cost:  1.61\n",
+      "epoch:  9 cost:  1.61\n",
+      "epoch:  10 cost:  1.608\n",
+      "epoch:  11 cost:  1.607\n",
+      "epoch:  12 cost:  1.606\n",
+      "epoch:  13 cost:  1.606\n",
+      "epoch:  14 cost:  1.604\n",
+      "epoch:  15 cost:  1.604\n",
+      "epoch:  16 cost:  1.603\n",
+      "epoch:  17 cost:  1.602\n",
+      "epoch:  18 cost:  1.602\n",
+      "epoch:  19 cost:  1.599\n",
+      "epoch:  20 cost:  1.599\n",
+      "epoch:  21 cost:  1.599\n",
+      "epoch:  22 cost:  1.599\n",
+      "epoch:  23 cost:  1.598\n",
+      "epoch:  24 cost:  1.597\n",
+      "epoch:  25 cost:  1.597\n",
+      "epoch:  26 cost:  1.597\n",
+      "epoch:  27 cost:  1.597\n",
+      "epoch:  28 cost:  1.597\n",
+      "epoch:  29 cost:  1.597\n",
+      "epoch:  30 cost:  1.596\n",
+      "epoch:  31 cost:  1.596\n",
+      "epoch:  32 cost:  1.595\n",
+      "epoch:  33 cost:  1.595\n",
+      "epoch:  34 cost:  1.595\n",
+      "epoch:  35 cost:  1.595\n",
+      "epoch:  36 cost:  1.595\n",
+      "epoch:  37 cost:  1.595\n",
+      "epoch:  38 cost:  1.595\n",
+      "epoch:  39 cost:  1.595\n",
+      "epoch:  40 cost:  1.594\n",
+      "epoch:  41 cost:  1.594\n",
+      "epoch:  42 cost:  1.594\n",
+      "epoch:  43 cost:  1.594\n",
+      "epoch:  44 cost:  1.595\n",
+      "epoch:  45 cost:  1.595\n",
+      "epoch:  46 cost:  1.594\n",
+      "epoch:  47 cost:  1.594\n",
+      "epoch:  48 cost:  1.594\n",
+      "epoch:  49 cost:  1.592\n",
+      "epoch:  50 cost:  1.592\n",
+      "epoch:  51 cost:  1.592\n",
+      "epoch:  52 cost:  1.592\n",
+      "epoch:  53 cost:  1.592\n",
+      "epoch:  54 cost:  1.592\n",
+      "epoch:  55 cost:  1.592\n",
+      "epoch:  56 cost:  1.591\n",
+      "epoch:  57 cost:  1.59\n",
+      "epoch:  58 cost:  1.591\n",
+      "epoch:  59 cost:  1.59\n",
+      "epoch:  60 cost:  1.59\n",
+      "epoch:  61 cost:  1.59\n",
+      "epoch:  62 cost:  1.59\n",
+      "epoch:  63 cost:  1.59\n",
+      "epoch:  64 cost:  1.59\n",
+      "epoch:  65 cost:  1.59\n",
+      "epoch:  66 cost:  1.59\n",
+      "epoch:  67 cost:  1.59\n",
+      "epoch:  68 cost:  1.59\n",
+      "epoch:  69 cost:  1.59\n",
+      "epoch:  70 cost:  1.59\n",
+      "epoch:  71 cost:  1.59\n",
+      "epoch:  72 cost:  1.59\n",
+      "epoch:  73 cost:  1.59\n",
+      "epoch:  74 cost:  1.59\n",
+      "epoch:  75 cost:  1.59\n",
+      "epoch:  76 cost:  1.589\n",
+      "epoch:  77 cost:  1.589\n",
+      "epoch:  78 cost:  1.589\n",
+      "epoch:  79 cost:  1.589\n",
+      "epoch:  80 cost:  1.589\n",
+      "epoch:  81 cost:  1.589\n",
+      "epoch:  82 cost:  1.589\n",
+      "epoch:  83 cost:  1.589\n",
+      "epoch:  84 cost:  1.589\n",
+      "epoch:  85 cost:  1.589\n",
+      "epoch:  86 cost:  1.589\n",
+      "epoch:  87 cost:  1.589\n",
+      "epoch:  88 cost:  1.589\n",
+      "epoch:  89 cost:  1.588\n",
+      "epoch:  90 cost:  1.588\n",
+      "epoch:  91 cost:  1.588\n",
+      "epoch:  92 cost:  1.588\n",
+      "epoch:  93 cost:  1.588\n",
+      "epoch:  94 cost:  1.588\n",
+      "epoch:  95 cost:  1.588\n",
+      "epoch:  96 cost:  1.588\n",
+      "epoch:  97 cost:  1.586\n",
+      "epoch:  98 cost:  1.586\n",
+      "epoch:  99 cost:  1.586\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(epoch):\n",
+    "    sess.run(training_steps, feed_dict={x:X_train, y_:y_train})\n",
+    "    cost = sess.run(cost_function, feed_dict={x:X_train, y_:y_train})\n",
     "\n",
-    "init = tf.compat.v1.global_variables_initializer()\n",
+    "    cost_history = np.append(cost_history, cost)\n",
     "\n",
+    "    print('epoch: ', i , 'cost: ', cost)\n",
     "\n",
-    "pred = tf.nn.softmax(tf.matmul(w, x) + b)\n"
+    "y_pred = sess.run(pred, feed_dict={x:X_test})"
    ]
   },
   {
