--- a/flowers.ipynb
+++ b/flowers.ipynb
@@ -591,7 +591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = tf.nn.softmax(tf.matmul(x, tf.transpose(w)) + b)\n"
+    "\n",
+    "pred = tf.nn.softmax(tf.matmul(x, tf.transpose(w)) + b) # preceptron\n"
    ]
   },
   {
