--- a/flower_with_multi_layers.ipynb
+++ b/flower_with_multi_layers.ipynb
@@ -15,6 +15,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['house_data', 'street_data']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_path = './datasets/living_room/'\n",
+    "\n",
+    "os.listdir(flow_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
